# TricoreBoot

./: .gitignore  ASMQuickSort.S  CMakeLists.txt  Makefile  Readme.md  asm_demo.S  c_demo.c  cpp_demo.cpp  create_large_data.py  example_launch.json  extern_large_data.cpp  link_c.ld  linker_asm.ld  quickSort.cpp  test_read_file.c
build_tricore_gcc_from_source/: Readme.md  binutils_clean  binutils_configure  binutils_install  binutils_install_strip  binutils_make  binutils_mcs_configure  binutils_mcs_make  copy2host  do_all  gcc_clean  gcc_configure  gcc_install_c  gcc_install_clib  gcc_install_strip_c  gcc_install_strip_clib  gcc_make_c  gcc_make_clib  newlib_clean  newlib_configure  newlib_install  newlib_make
doc/: launch.json
